# timely-beliefs

./: .flake8  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  base.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_events.py  to_pypi.sh
.github/agents/: auto-fix.md  docs-agent.md  test-agent.md
.github/workflows/: lint-and-test.yml  notify-on-failure.yml  release.yml
dev/: dev.md  requirements.txt
dev/3.11/: requirements.txt
dev/3.9/: requirements.txt
tests/: verify_fix.py
timely_beliefs/: DB.md  __init__.py  accuracy.md  base.py  beliefs.py  sensors.py  sources.py  utils.py  viz.md
timely_beliefs/beliefs/: __init__.py  classes.py  generate.py  probabilistic_utils.py  queries.py  time_utils.py  utils.py
timely_beliefs/docs/: accuracy.md  confidence.md  db.md  init.md  lineage.md  resampling.md  slicing.md  timing.md  viz.md
timely_beliefs/examples/: __init__.py  beliefs_data_frames.py  chart.html  locale_datetime_sample.csv  temperature.csv  timezone_naive_sample.csv  visualize_example.py
timely_beliefs/func_store/: knowledge_horizons.py  test_knowledge_horizons.py
timely_beliefs/sensors/: classes.py  utils.py
timely_beliefs/sensors/func_store/: event_values.py  knowledge_horizons.py  test_knowledge_horizons.py  utils.py
timely_beliefs/sources/: classes.py  utils.py
timely_beliefs/tests/: README.md  __init__.py  conftest.py  create_tables.py  drop_tables.py  examples.py  test_accuracy.py  test_belief_formation.py  test_belief_init.py  test_belief_io.py  test_belief_persistence.py  test_belief_query.py  test_belief_slicing.py  test_belief_utils.py  test_db_subclassing.py  test_df_resampling.py  test_ignore_36__belief_init.py  test_plotting.py  test_probabilistic_downsampling.py  test_probabilistic_interpolation.py  test_read_csv_frequency.py  test_ridgeline.py  test_sensor_init.py  test_sensor_query.py  test_utils.py  test_viz__plotting.py  test_viz__ridgeline.py  utils.py
timely_beliefs/visualization/: graphs.py  ridgeline.py  selectors.py  utils.py
