[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timely-beliefs"
description = "Data modelled as beliefs (at a certain time) about events (at a certain time)."
requires-python = ">=3.6"  # Please note that we don't actively support <= 3.7, but only >= 3.8
authors = [
  {name = "Seita BV", email = "felix@seita.nl"}
]
keywords = [
    "time series",
    "forecasting",
    "analytics",
    "visualization",
    "uncertainty",
    "lineage",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "importlib_metadata",
    "pytz",
    "isodate",
    "openturns",
    "properscoring",

    # Database support
    "psycopg2-binary",
    "SQLAlchemy>=2",

    # Conditional
    # numpy's setup requires minimal Python versions
    "numpy==1.19.5; python_version <= '3.6'",
    "numpy==1.21.4; python_version <= '3.7'",
    "numpy; python_version > '3.7'",
    # https://pandas.pydata.org/pandas-docs/stable/whatsnew/v1.2.0.html#increased-minimum-version-for-python
    "pandas >= 1.1.5, < 1.2; python_version <= '3.6'",
    "pandas >= 1.1.5, < 1.3; python_version == '3.7'",
    # https://github.com/SeitaBV/timely-beliefs/issues/148
    "pandas >= 1.4.0, != 2.1.0, !=2.1.1; python_version > '3.7'",
    # https://github.com/SeitaBV/timely-beliefs/issues/177
    "pandas < 2.2.2",
    # scipy's setup requires minimal Python versions
    "scipy<1.6; python_version <= '3.6'",
    "scipy<1.8; python_version <= '3.7'",
    "scipy; python_version > '3.7'",
]
dynamic = ["version"]

[project.optional-dependencies]
viz = [
    "altair>=4.0.0, <5",
]
forecast = [
    "sktime",
    "numpy>=1.21.0; python_version > '3.7'",  # required by sktime==0.15.0
]

[project.readme]
text = "Model to represent data as beliefs about events, stored in the form of a multi-index pandas DataFrame enriched with attributes to get out convenient representations of the data."
content-type = "text/plain"

[project.urls]
homepage = "https://github.com/seitabv/timely-beliefs"
documentation = "https://github.com/SeitaBV/timely-beliefs#readme"


[tool.black]
line-length = 88  # keep this in sync with the value for flake8 and isort

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = "timely_beliefs"
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.setuptools.packages.find]  # explicitly state which packages we do want in the package (i.e. not dev)"
include = ["timely_beliefs*"]
