[bdist_wheel]
universal = 1

[flake8]
exclude = .git,__pycache__,documentation
max-line-length = 88
max-complexity = 13
# this is a whitelist since flake8 v3; B9 is flake-bugbear
select = B,C,E,F,W,B9
# ignore E501 bcs we use bugbear for line-length, W503 because black does, too
ignore = E501, W503, E203

[metadata]
name = "timely-beliefs"
description = "Data modelled as beliefs (at a certain time) about events (at a certain time)."
author = "Seita BV"
author_email = "felix@seita.nl"
url = "https://github.com/seitabv/timely-beliefs"
keywords =
    "time series"
    "forecasting"
    "analytics"
    "visualization"
    "uncertainty"
    "lineage"
python_requires = >=3.8  # not enforced, just info. 3.6 and 3.7 are possible to install, but we don't support
setup_requires =
    "setuptools_scm"
packages = find:
include_package_data = True  # now setuptools_scm adds all files under source control
classifiers=
    "Programming Language :: Python"
    "Programming Language :: Python :: 3"
    "Programming Language :: Python :: 3.8"
    "Programming Language :: Python :: 3.9"
    "Development Status :: 3 - Alpha"
    "Intended Audience :: Developers"
    "License :: OSI Approved :: MIT License"
    "Operating System :: OS Independent"
    "Topic :: Software Development :: Libraries :: Python Modules"
    "Topic :: Scientific/Engineering :: Information Analysis"
long_description = "Model to represent data as beliefs about events, stored in the form of a multi-index pandas DataFrame enriched with attributes to get out convenient representations of the data."
