[bdist_wheel]
universal = 1

[flake8]
exclude = .git,__pycache__,documentation
max-line-length = 88
max-complexity = 13
# this is a whitelist since flake8 v3; B9 is flake-bugbear
select = B,C,E,F,W,B9
# ignore E501 bcs we use bugbear for line-length, W503 because black does, too
ignore = E501, W503, E203

[metadata]
setup_requires =
    setuptools_scm
packages = find:
include_package_data = True  # now setuptools_scm adds all files under source control
